--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Analysis/.idea
 RobotMonitor/gui_auto.py
 TRobot/lidcycle.log.1
 Misc/testheader.txt
+Experiment/test.m
+Experiment/test.py
+Experiment/test.txt
